# Ipl_auction_sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ipl_auction_sim/: __init__.py  impact_points.py  pdf_to_csv.py  player_stats_scraper.py  simulator.py
tests/: test_impact_points.py  test_simulator.py
